genre  fix+ flex-wrap

--- a/Frontend/src/css/Search.css
+++ b/Frontend/src/css/Search.css
@@ -23,7 +23,9 @@
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
-  padding: 20px;
+  padding: px;
+  flex-wrap: wrap;
+ 
 
 }
 
